--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,3 @@
 include README.rst
 recursive-include drf_ng_generator/templates *
-recursive-include drf_ng_generator/*
+recursive-include drf_ng_generator/* *.py *.json *.html
