--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,6 @@
 include README.rst
-recursive-include drf_ng_generator/templates *
 recursive-include drf_ng_generator/* *.py *.json *.html
+recursive-include drf_ng_generator/templates *
+recursive-include drf_ng_generator/coreapi/* *.py
+recursive-include drf_ng_generator/management/* *.py
+recursive-include drf_ng_generator/openapi/* *.py
